--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,11 +1,10 @@
 version: "3"
 services:
   mysql:
+    platform: linux/x86_64
     image: mysql:5.7
     environment:
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
-      MYSQL_USER: ${MYSQL_USER}
-      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
       MYSQL_DATABASE: ${MYSQL_DATABASE}
     ports:
       - "3306:3306"
