--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,3 +10,21 @@ services:
       - "3306:3306"
     volumes:
       - ./data:/var/lib/mysql
+
+  prometheus:
+    image: prom/prometheus
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./prometheus:/etc/prometheus
+    command:
+      - "--config.file=/etc/prometheus/prometheus.yml"
+    depends_on:
+      - myapp
+
+  myapp:
+    build: .
+    ports:
+      - "80:80"
+    depends_on:
+      - mysql
